# vulkan-rs

./: Cargo.toml  build_shaders.sh  todo.txt
shaders/: colored_triangle.frag  tri_mesh.vert  tri_mesh.vert.spv
src/: main.rs  mesh.rs  platforms.rs
