[package]
name = "vulkan-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
image = "0.23.14"
ash = "0.33.0"
ash-window = "0.7.0"
env_logger = "0.8.4"
log = "0.4.14"
vk-mem = {git = "https://github.com/aclysma/vk-mem-rs.git", branch = "ash-0.33-build-fix"}
nalgebra-glm = "0.15.0"
memoffset = "0.6.4"